--- a/src/App.css
+++ b/src/App.css
@@ -7,3 +7,31 @@
 .wrapper{
     max-height: 100%;
 }
+
+
+/* PRODUCTOS */
+.wrapper-panel-izq{
+    width: 20%;
+    background-color: aqua;
+    height: 100vh;
+}
+
+.carousel-menu-Productos{
+    width: 80%;
+    background-color: red;
+}
+
+.carousel-item{
+    height: 450px;
+    width: 100%;
+}
+
+.carousel-img{
+    object-fit:contain;
+    width: 100%;
+    height: 100%;
+}
+
+.carousel-caption{
+    opacity: 50%;
+}
