--- a/src/components/header/navbar.css
+++ b/src/components/header/navbar.css
@@ -2,7 +2,7 @@
     display: flex;
     align-items: center;
     justify-content: space-around;
-    background-color:#053F71;
+    background-color: black;
     height: 70px;
     text-transform: uppercase;
 }
