--- a/src/App.css
+++ b/src/App.css
@@ -26,6 +26,7 @@
 
 .hero-inicio h1 {
     text-transform: uppercase;
+    font-weight: bold;
 }
 
 .wrapper-titulo{
@@ -44,12 +45,6 @@
     text-align: justify;
 }
 
-@media only screen and (max-width: 600px) {
-    .container {
-        padding: 10px;
-    }
-}
-
 .container-cards-incio{
     display: flex;
     flex-direction: row;
@@ -60,8 +55,7 @@
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
     border-radius: 8px;
     padding: 20px;
-    max-width: 450px;
-    max-height: 300px;
+    max-width: 300px;
     margin: 50px auto;
 }
 
@@ -82,36 +76,59 @@
     line-height: 1.5;
 }
 
+@media (max-width: 500px) {
+    .wrapper-hero-inicio {
+        padding: 10px;
+        height: auto;
+    }
+
+    .hero-inicio {
+        padding: 10px;
+    }
+
+    .container-cards-incio {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .card-individual {
+        margin: 20px auto;
+    }
+}
+
 
 
 /* PRODUCTOS */
 .wrapper-Productos{
     background-image: url(/src/assets/img/wallpaper-inicio.jpg);
     background-size: cover;
-    display: flex;
-}
-
-.wrapper-panel-der{
-    display: flex;
-    flex-direction: column;
     text-align: center;
     align-items: center;
-    width: 90%;
     color: white;
+    display: flex;
+    flex-direction: column;
 }
 
+.wrapper-Productos h1{
+    font-weight: bold;
+    text-transform: uppercase;
+    padding: 40px;
+}
+
+.wrapper-Productos p{
+    text-align: justify;
+    padding-bottom: 20px;
+}
 
 .productos-slider-container {
-    width: 100%;
-    max-width: 600px;
+    max-width: 1000px;
     margin: 0 auto;
-    overflow: hidden;
 }
 
 .productos-slider {
     display: flex;
     width: 300%;
-    animation: slide 20s infinite;
+    animation: slide 40s infinite;
 }
 
 .productos-card {
@@ -139,7 +156,7 @@
     }
 
     66.66% {
-        transform: translateX(-130%);
+        transform: translateX(-80%);
     }
 
     100% {
@@ -147,77 +164,56 @@
     }
 }
 
-@media (max-width: 600px) {
+.wrapper-body{
+    margin-top: 50px;
+    max-width: 1000px;
+    text-align: justify;
+    margin-bottom: 50px;
+}
+
+@media (max-width: 500px) {
+    .wrapper-Productos {
+        padding: 20px;
+        min-height: 100vh;
+    }
+
+    .wrapper-Productos h1 {
+        padding: 20px 0;
+    }
+
+    .productos-slider-container {
+        max-width: 100%;
+        padding: 0 20px;
+        margin-bottom: -20px;
+    }
+
+    .productos-slider {
+        width: 300px;
+        animation: slide 20s infinite;
+    }
+
+    @keyframes slide {
+        0% {
+            transform: translateX(0);
+        }
+        50.66% {
+            transform: translateX(-800%);
+        }
+        100% {
+            transform: translateX(0);
+        }
+    }
+
     .productos-card {
         min-width: 100%;
+        margin-right: 0;
+        margin-bottom: 20px;
     }
-}
 
-
-.toggle-button {
-    position: fixed;
-    top: 20px;
-    left: 20px;
-    background-color: #fff;
-    color: #333;
-    border: none;
-    padding: 0;
-    width: 30px;
-    height: 30px;
-    cursor: pointer;
-    overflow: hidden;
-    transition: background-color 0.3s;
-}
-
-.toggle-button:hover {
-    background-color: #ccc;
-}
-
-.triangle-down {
-    position: relative;
-    width: 0;
-    height: 0;
-    border-left: 8px solid transparent;
-    border-right: 8px solid transparent;
-    border-top: 8px solid #333;
-}
-
-.panel {
-    height: 100vh;
-    width: 200px;
-    background-color: rgba(0, 0, 255, 0.2);
-    color: #fff;
-    padding: 20px;
-    overflow-y: auto;
-    transition: transform 0.3s ease-in-out;
-    transform: translateX(0);
-}
-
-.panel.hidden {
-    transform: translateX(-100%);
-}
-
-.panel h1 {
-    font-size: 24px;
-    margin-top: 0;
-    margin-bottom: 20px;
-}
-
-.panel ul {
-    list-style-type: none;
-    padding: 0;
-    margin: 0;
-    display: flex;
-    flex-direction: column;
-}
-
-.panel li {
-    margin-bottom: 10px;
-}
-
-.panel a {
-    color: #fff;
-    text-decoration: none;
+    .wrapper-body {
+        max-width: 100%;
+        margin-bottom: 50px;
+    }
 }
 
 
@@ -232,18 +228,23 @@
     padding: 0;
 }
 
+.wrapper-servicios h1{
+    font-weight: bold;
+}
+
 .container-servicios {
-    max-width: 800px;
+    max-width: 1000px;
     margin: 0 auto;
     padding: 20px;
     text-align: justify;
-    background-color: #08000071;
 }
 
-.container-servicios h1 {
+.container-titulo-servicios{
     text-align: center;
-    margin-bottom: 40px;
     text-transform: uppercase;
+    margin-bottom: 10px;
+    border-radius: 10px;
+    padding: 25px;
 }
 
 .container-servicios h2 {
@@ -264,13 +265,21 @@
 
 
 /* EQUIPO */
-.wrapper-equipo {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 20px;
+.wrapper-wrapper-equipo {
     background-image: url(../src/assets/img/wallpaper-equipo.jpg);
     background-size: cover;
-    height: 100vh;
+    background-attachment: fixed;
+    margin: 0;
+    font-family: Arial, sans-serif;
+    height: auto;
+    padding: 20px;
+    display: flex;
+    justify-content: center;
+}
+
+.wrapper-equipo {
+    max-width: 1000px;
+    width: 100%;
 }
 
 .wrapper-equipo h1 {
@@ -281,7 +290,7 @@
 }
 
 .tabla-integrantes {
-    width: 80%;
+    width: 100%;
     margin: 0 auto;
     border-collapse: collapse;
     background-color: rgba(1, 6, 8, 0.904);
@@ -290,9 +299,12 @@
 
 .tabla-integrantes th{
     text-transform: uppercase;
+    padding: 8px;
+    text-align: left;
+    border-bottom: 1px solid #ddd;
 }
 
-.tabla-integrantes th, td {
+.tabla-integrantes td {
     padding: 8px;
     text-align: left;
     border-bottom: 1px solid #ddd;
@@ -300,53 +312,138 @@
 
 .tabla-integrantes tr:hover {
     background-color: #f5f5f5;
-}
-
-@media screen and (max-width: 600px) {
-    .tabla-integrantes {
-        width: 100%;
-        border: 1px solid #ddd;
-    }
-
-    .tabla-integrantes th,
-    td {
-        padding: 5px;
-    }
+    color: black;
 }
 
 .container-tabla-datos{
-    display: flex;
-    justify-content: flex-start;
-    align-items: flex-end;
     padding-top: 100px;
-    padding-left: 185px;
 }
 
 .tabla-datos {
-    width: 20%;
+    width: 100%;
+    text-align: center;
     border-collapse: collapse;
     background-color: rgba(1, 6, 8, 0.904);
     color: white;
 }
 
-.tabla-datos th, td {
+.tabla-datos th{
     padding: 5px;
-    text-align: left;
+    text-align: center;
+    border-bottom: 1px solid #ddd;
+}
+
+.tabla-datos td{
+    padding: 5px;
+    text-align: center;
     border-bottom: 1px solid #ddd;
 }
 
 .tabla-datos tr:hover {
     background-color: #f5f5f5;
+    color: black;
 }
 
-@media screen and (max-width: 400px) {
-    .tabla-datos {
-        width: 100%;
-        border: 1px solid #ddd;
+.tabla-datos td:hover {
+    background-color: #f5f5f5;
+    color: black;
+}
+
+@media (max-width: 800px) {
+    .wrapper-equipo {
+        height: 100%;
+    }
+
+    .wrapper-equipo h1 {
+        font-size: 18px;
+        padding: 10px;
+    }
+
+    .tabla-integrantes th,
+    .tabla-integrantes td {
+        padding: 5px;
     }
 
     .tabla-datos th,
-    td {
+    .tabla-datos td {
         padding: 3px;
+    }
+}
+
+
+
+/* CONTACTO */
+.wrapper-contacto {
+    box-sizing: border-box;
+    font-family: Arial, sans-serif;
+    margin: 0;
+    padding: 20px;
+    background-image: url(../src/assets/img/wallpaper-contacto.jpg);
+    background-size: cover;
+    min-height: 100vh;
+    display: flex;
+    justify-content: center;
+}
+
+.hero-wrapper {
+    padding-top: 50px;
+    width: 1000px;
+}
+
+.hero-wrapper h1{
+    text-transform: uppercase;
+    padding-bottom: 40px;
+    text-align: center;
+    font-weight: bold;
+    color: white;
+}
+
+.hero-wrapper .form-group {
+    margin-bottom: 20px;
+}
+
+.hero-wrapper label {
+    display: block;
+    font-weight: bold;
+    margin-bottom: 5px;
+    text-transform: uppercase;
+    color:rgb(255, 255, 255);
+}
+
+.hero-wrapper input, textarea {
+    width: 100%;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    background-color: rgba(0, 0, 0, 0.507);
+}
+
+.hero-wrapper textarea {
+    resize: vertical;
+    height: 120px;
+}
+
+.hero-wrapper .btn {
+    display: inline-block;
+    background-color: #00000094;
+    color: white;
+    padding: 10px 20px;
+    text-decoration: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+@media (max-width: 500px) {
+    .hero-wrapper h1 {
+        font-size: 20px;
+    }
+
+    .hero-wrapper input,
+    .hero-wrapper textarea {
+        padding: 6px;
+    }
+
+    .hero-wrapper textarea {
+        height: 60px;
     }
 }
