--- a/src/App.css
+++ b/src/App.css
@@ -171,7 +171,7 @@
     margin-bottom: 50px;
 }
 
-@media (max-width: 500px) {
+@media (max-width: 501px) {
     .wrapper-Productos {
         padding: 20px;
         min-height: 100vh;
@@ -185,6 +185,8 @@
         max-width: 100%;
         padding: 0 20px;
         margin-bottom: -20px;
+        overflow: hidden;
+
     }
 
     .productos-slider {
@@ -212,10 +214,10 @@
 
     .wrapper-body {
         max-width: 100%;
-        padding: 0 20px;
         margin-bottom: 50px;
     }
 }
+
 
 
 
